# sec_gov_extract_info

./: README.md  credentials.json  errors.csv  etl.ipynb  etl.py  etl_config.yaml  etl_transform.py  history.txt  meta_data.py  prod.excalidraw  pyproject.toml  requirements.txt  rted.ipynb  test.ipynb  tickers.py
alembic/: env.py
alembic/versions/: 2024_05_02_2152-4071818e158c_test.py
core/: config.py
core/etl/: config.py  interface.py  meta_data.py  tickers.py
core/models/: __init__.py  base.py  cik.py
sec_api/sec_api/: 0.ipynb  2_ai.db  DESCRIPTION.md  json_data.json
sec_api/sec_api/https:/data.sec.gov/: submissions.json
sec_primary_info/: Dockerfile  README.md  content_.excalidraw  docker-compose.yml  pyproject.toml  requirements.txt  road.md
sec_primary_info/app/: sec_reports.py
sec_primary_info/primary_sec/docs/: error.txt  tickers.json
sec_primary_info/primary_sec/settings/: config.py  count_all.pgsql  db_config.json
sec_primary_info/primary_sec/src/sec_archive/: extract.py  launch.py  transform_load.py
sec_primary_info/primary_sec/src/sec_tickers/: extract.py  launch.py  transform.py
sec_primary_info/primary_sec/tests/: selenium_test.py
sec_primary_info/primary_sec/utils/: data_bases.py  driver_gecko.py  drivers.py
