[tool.poetry]
name = "sec-gov-extract-info"
version = "0.1.0"
description = ""
authors = ["Nick <ln@modul.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
acryl-datahub = "^0.13.1.3"
aiohttp = "^3.9.5"
aiosignal = "^1.3.1"
annotated-types = "^0.6.0"
asttokens = "^2.4.1"
async-timeout = "^4.0.3"
attrs = "^23.2.0"
avro = "^1.11.3"
avro-gen3 = "^0.7.12"
blinker = "^1.8.1"
build = "^1.2.1"
cachecontrol = "^0.14.0"
cached-property = "^1.5.2"
certifi = "^2024.2.2"
chardet = "^5.2.0"
charset-normalizer = "^3.3.2"
cleo = "^2.1.0"
click = "^8.1.7"
click-default-group = "^1.2.4"
click-spinner = "^0.1.10"
comm = "^0.2.2"
crashtest = "^0.4.1"
cryptography = "^42.0.5"
debugpy = "^1.8.1"
decorator = "^5.1.1"
deprecated = "^1.2.14"
distlib = "^0.3.8"
distro = "^1.9.0"
distro-info = "^1.0"
docker = "^7.0.0"
dockerpty = "^0.4.1"
docopt = "^0.6.2"
dulwich = "^0.22.1"
exceptiongroup = "^1.2.1"
executing = "^2.0.1"
expandvars = "^0.12.0"
fastjsonschema = "^2.19.1"
filelock = "^3.14.0"
frozenlist = "^1.4.1"
greenlet = "^3.0.3"
httplib2 = "^0.22.0"
humanfriendly = "^10.0"
idna = "^3.7"
ijson = "^3.2.3"
importlib-metadata = "^7.1.0"
installer = "^0.7.0"
ipykernel = "^6.29.4"
ipython = "^8.24.0"
jaraco-classes = "^3.4.0"
jedi = "^0.19.1"
jeepney = "^0.8.0"
jsonref = "^1.1.0"
jsonschema = "^4.21.1"
jupyter-client = "^8.6.1"
jupyter-core = "^5.7.2"
keyring = "^25.2.0"
launchpadlib = "^1.11.0"
lazr-restfulclient = "^0.14.6"
lazr-uri = "^1.0.6"
matplotlib-inline = "^0.1.7"
mixpanel = "^4.10.1"
more-itertools = "^10.2.0"
msgpack = "^1.0.8"
multidict = "^6.0.5"
mypy-extensions = "^1.0.0"
nest-asyncio = "^1.6.0"
netifaces = "^0.11.0"
numpy = "^1.26.4"
oauthlib = "^3.2.2"
packaging = "^24.0"
pandas = "^2.2.2"
parso = "^0.8.4"
pexpect = "^4.9.0"
pkginfo = "^1.10.0"
platformdirs = "^4.2.1"
poetry-core = "^1.9.0"
progressbar2 = "^4.4.2"
prompt-toolkit = "^3.0.43"
psutil = "^5.9.8"
ptyprocess = "^0.7.0"
pure-eval = "^0.2.2"
pydantic = "^2.7.1"
pydantic-core = "^2.18.2"
pygments = "^2.17.2"
pyjwt = "^2.8.0"
pymongo = "^4.7.0"
pyparsing = "^3.1.2"
pyproject-hooks = "^1.1.0"
pyrsistent = "^0.20.0"
python-dateutil = "^2.9.0.post0"
python-dotenv = "^1.0.1"
python-utils = "^3.8.2"
pytz = "^2024.1"
pyyaml = "^6.0.1"
pyzmq = "^26.0.2"
ranger-fm = "^1.9.3"
rapidfuzz = "^3.8.1"
requests = "^2.31.0"
requests-file = "^2.0.0"
requests-toolbelt = "^1.0.0"
ruamel-yaml = "^0.18.6"
ruamel-yaml-clib = "^0.2.8"
secretstorage = "^3.3.3"
sentry-sdk = "^2.0.1"
shellingham = "^1.5.4"
six = "^1.16.0"
sqlalchemy = "^2.0.29"
stack-data = "^0.6.3"
tabulate = "^0.9.0"
termcolor = "^2.4.0"
texttable = "^1.7.0"
toml = "^0.10.2"
tomli = "^2.0.1"
tomlkit = "^0.12.4"
tornado = "^6.4"
traitlets = "^5.14.3"
trove-classifiers = "^2024.4.10"
typing-inspect = "^0.9.0"
typing-extensions = "^4.11.0"
tzdata = "^2024.1"
urllib3 = "^2.2.1"
virtualenv = "^20.26.1"
wadllib = "^1.3.6"
wcwidth = "^0.2.13"
websocket-client = "^1.8.0"
wrapt = "^1.16.0"
yarl = "^1.9.4"
zipp = "^3.18.1"
alembic = "^1.13.1"
black = "23.7.0"
pydantic-settings = "^2.2.1"
aiosqlite = "^0.20.0"
asyncpg = "^0.29.0"
asyncio = "^3.4.3"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
