[tool.poetry]
name = "primary-sec"
version = "0.1.0"
description = ""
authors = ["Nick <nicklisits@gmail.com>"]
readme = "README.md"
packages = [{include = "primary_sec"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.3"
numpy = "^1.24.2"
pathlib = "^1.0.1"
tomlkit = "^0.11.6"
jupyterlab = "^3.6.1"
webdriver-manager = "^3.8.5"
selenium = "^4.8.2"
bs4 = "^0.0.1"
lxml = "^4.9.2"
requests = "^2.28.2"
jupyter = "^1.0.0"
sqlalchemy = "^2.0.9"
psycopg2 = "^2.9.6"
tqdm = "^4.65.0"
fake-useragent = "^1.1.3"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]

archive_extract = "primary_sec.src.sec_archive.extract:download_zip_file"
archive_load = "primary_sec.src.sec_archive.transform_load:archive_load"

tickers_extract = "primary_sec.src.sec_tickers.extract:tickers_extract"
tickers_load  = "primary_sec.src.sec_tickers.transform:load_to_db"
